Branch da galeria criada

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -110,10 +110,19 @@
         <div class="conteudo" style="background-color: rgba(0, 0, 0, 0.75);">
 
           <hr>
+
           <!-- Add images to <div class="fotorama"></div> -->
-          <div class="fotorama" data-width="100%" data-nav="thumbs" data-transition="crossfade" data-loop="true" data-autoplay="true" data-shuffle="true">
-            <img src="https://s.fotorama.io/1.jpg" data-caption="One">
-            <img src="https://s.fotorama.io/2.jpg" data-caption="One">
+          <div class="fotorama" data-width="100%" data-height="100%" data-navposition="top" data-nav="thumbs" data-transition="crossfade" data-loop="true" data-autoplay="true" data-shuffle="true" data-allowfullscreen="true">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/001.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/002.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/003.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/004.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/005.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/006.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/007.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/008.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/009.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/010.jpg" data-caption="Assetto Corsa">
           </div>
 
         </div>
