--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -112,7 +112,7 @@
           <hr>
 
           <!-- Add images to <div class="fotorama"></div> -->
-          <div class="fotorama" data-width="100%" data-height="100%" data-navposition="top" data-nav="thumbs" data-transition="crossfade" data-loop="true" data-autoplay="true" data-shuffle="true" data-allowfullscreen="true">
+          <div class="fotorama" data-width="100%" data-height="90%" data-navposition="top" data-nav="thumbs" data-transition="crossfade" data-loop="true" data-autoplay="true" data-shuffle="true" data-allowfullscreen="true">
             <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/001.jpg" data-caption="Assetto Corsa">
             <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/002.jpg" data-caption="Assetto Corsa">
             <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/003.jpg" data-caption="Assetto Corsa">
@@ -123,6 +123,131 @@
             <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/008.jpg" data-caption="Assetto Corsa">
             <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/009.jpg" data-caption="Assetto Corsa">
             <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/010.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/011.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/012.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/013.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/014.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/015.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/016.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/017.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/018.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/019.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/020.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/021.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/022.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/023.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/024.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/025.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/026.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/028.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/029.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/030.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/031.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/032.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/033.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/034.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/035.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/036.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/037.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/038.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/039.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/040.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/041.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/042.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/043.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/044.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/045.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/046.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/047.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/048.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/049.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/050.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/051.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/052.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/053.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/054.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/055.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/056.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/057.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/058.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/059.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/060.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/061.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/062.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/063.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/064.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/065.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/066.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/067.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/068.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/069.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/070.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/071.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/072.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/073.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/074.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/075.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/076.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/077.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/078.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/079.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/080.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/081.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/082.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/083.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/084.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/085.jpg" data-caption="Assetto Corsa">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsaCompetizone/001.jpg" data-caption="Assetto Corsa Competizone">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsaCompetizone/002.jpg" data-caption="Assetto Corsa Competizone">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsaCompetizone/003.jpg" data-caption="Assetto Corsa Competizone">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsaCompetizone/004.jpg" data-caption="Assetto Corsa Competizone">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/DirtRally2.0/001.jpg" data-caption="Dirt Rally 2.0">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/DirtRally2.0/002.jpg" data-caption="Dirt Rally 2.0">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/DirtRally2.0/003.jpg" data-caption="Dirt Rally 2.0">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/F122/001.jpg" data-caption="F1 22">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/F122/002.jpg" data-caption="F1 22">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/F122/003.jpg" data-caption="F1 22">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/F122/004.jpg" data-caption="F1 22">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/F122/005.jpg" data-caption="F1 22">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/F122/006.jpg" data-caption="F1 22">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/F122/007.jpg" data-caption="F1 22">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/F122/008.jpg" data-caption="F1 22">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/AssettoCorsa/027.jpg" data-caption="Forza Horizon 4">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/ForzaHorizon/001.jpg" data-caption="Forza Horizon 4">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/ForzaHorizon/002.jpg" data-caption="Forza Horizon 4">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/ForzaHorizon/003.jpg" data-caption="Forza Horizon 4">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/ForzaHorizon/004.jpg" data-caption="Forza Horizon 4">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/ForzaHorizon/005.jpg" data-caption="Forza Horizon 4">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/ForzaHorizon/006.jpg" data-caption="Forza Horizon 4">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/ForzaHorizon/007.jpg" data-caption="Forza Horizon 4">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/ForzaHorizon/008.jpg" data-caption="Forza Horizon 4">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/ForzaHorizon/009.jpg" data-caption="Forza Horizon 4">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/ForzaHorizon/010.jpg" data-caption="Forza Horizon 4">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/ForzaHorizon/011.jpg" data-caption="Forza Horizon 4">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/ForzaHorizon/012.jpg" data-caption="Forza Horizon 5">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/ForzaHorizon/013.jpg" data-caption="Forza Horizon 5">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/ForzaHorizon/014.jpg" data-caption="Forza Horizon 5">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/GTAMods/001.jpg" data-caption="GTA Mods">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/GTAMods/002.jpg" data-caption="GTA Mods">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/NeedForSpeedHeat/001.jpeg" data-caption="Need For Speed: Heat">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/NeedForSpeedHeat/002.jpeg" data-caption="Need For Speed: Heat">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/NeedForSpeedHeat/003.jpeg" data-caption="Need For Speed: Heat">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/NeedForSpeedHeat/004.jpeg" data-caption="Need For Speed: Heat">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/NeedForSpeedHeat/005.jpeg" data-caption="Need For Speed: Heat">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/NeedForSpeedHeat/006.jpeg" data-caption="Need For Speed: Heat">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/NeedForSpeedHeat/007.jpeg" data-caption="Need For Speed: Heat">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/NeedForSpeedHeat/008.jpeg" data-caption="Need For Speed: Heat">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/NeedForSpeedHeat/009.jpeg" data-caption="Need For Speed: Heat">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/NeedForSpeedHeat/010.jpeg" data-caption="Need For Speed: Heat">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/NeedForSpeedHeat/011.jpeg" data-caption="Need For Speed: Heat">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/NeedForSpeedHeat/012.jpeg" data-caption="Need For Speed: Heat">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/NeedForSpeedHeat/013.jpeg" data-caption="Need For Speed: Heat">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/NeedForSpeedHeat/014.jpeg" data-caption="Need For Speed: Heat">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/NeedForSpeedHeat/015.jpeg" data-caption="Need For Speed: Heat">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/NeedForSpeedHeat/016.jpeg" data-caption="Need For Speed: Heat">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/TheCrew2/001.jpg" data-caption="The Crew 2">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/TheCrew2/002.jpg" data-caption="The Crew 2">
+            <img src="https://raw.githubusercontent.com/lobao-code/bancoimg/main/TheCrew2/003.jpg" data-caption="The Crew 2">
           </div>
 
         </div>
