--- a/pages/streamers.html
+++ b/pages/streamers.html
@@ -259,7 +259,7 @@
 
         <div class="conteudo">
             <hr>
-            <img class="perfil2" src="https://cdn.discordapp.com/attachments/758285096020606986/1029513274993168404/IMG_5140.jpg">
+            <img class="perfil" src="https://cdn.discordapp.com/attachments/758285096020606986/1029513274993168404/IMG_5140.jpg">
             <table>
                 <tr>
                     <td><h3 class="title">Nome:</h3></td>
