--- a/pages/streamers.html
+++ b/pages/streamers.html
@@ -168,7 +168,7 @@
 
         <div class="conteudo">
             <hr>
-            <img class="perfil" src="https://github.com/lobao-code/bancoimg/blob/main/Logos/1.jpg?raw=true">
+            <img class="perfil" src="https://github.com/lobao-code/bancoimg/blob/main/Logos/20221014_192207_edited.jpg?raw=true">
             <table>
                 <tr>
                     <td><h3 class="title">Nome:</h3></td>
@@ -292,7 +292,12 @@
                 <tr>
                     <td><h3 class="title">Descrição:</h3></td>
                     <td>
-                        <span class="txt"></span>
+                        <span class="txt">Inicio eu jogava apenas World of Warships, GTA V,<br>
+                                        Euro Truck Simulator 2, agora pretendo entrar na onda<br>
+                                        do alto mobilismo entrando no Assetto Corsa e Formula<br>
+                                        1 22, estou aprendendo a ser um piloto querendo melhorar<br>
+                                        minhas habilidades na pilotagem.
+                                    </span>
                     </td>
                 </tr>
                 <tr>
