--- a/pages/galeria-fh.html
+++ b/pages/galeria-fh.html
@@ -38,14 +38,14 @@
 				<li class="home primeiro"><a class="horz" href="../index.html">Início</a></li>
 				<li class="quem-somos"><a class="horz" href="../pages/Quem-Somos.html">Quem Somos</a></li>
 				<li class="streamers"><a class="horz" href="../pages/streamers.html">Streamers</a></li>
-				<li class="parceiros">
+				<!-- <li class="parceiros">
 					<a href="" class="dropbtn horz">Parceiros</a>
 					<div class="dropdown-content">
 						<a class="horz" href="#">Parceiro 1</a>
 						<a class="horz" href="#">Parceiro 2</a>
 						<a class="horz" href="#">Parceiro 3</a>
 					</div>
-				</li>
+				</li> -->
 				<li class="galeria-img">
                     <a href="" class="dropbtn horz">Galeria</a>
                     <div class="dropdown-content">
